gave project-container a height of auto to fix overlapping issues; minor formatting changes

--- a/css/cv.css
+++ b/css/cv.css
@@ -40,6 +40,10 @@ h2 {
   background-color: #dbdbda;
 }
 
+.content > p {
+  padding-bottom: 1rem;
+}
+
 .no-border {
   border: 0;
 }
