--- a/css/work.css
+++ b/css/work.css
@@ -21,7 +21,7 @@ button:disabled {
 
 #project-container {
   width: 100%;
-  height: 10rem;
+  height: auto;
   box-shadow: 2px 2px 8px 0px #00444f6d;
 }
 
@@ -40,6 +40,7 @@ button:disabled {
 .first-row {
   display: flex;
   align-items: center;
+  justify-content: space-around
 }
 
 .second-row {
@@ -110,4 +111,40 @@ button:disabled {
 #Pennsic {
   background-image: url(../assets/pennsic-background.webp);
   background-size: 100% auto;
+}
+
+@media (min-width: 600px) {
+  main {
+    margin-bottom: 120px;
+  }
+  
+  #project-container {
+    height: auto;
+  }
+
+  .project-visible {
+    grid-template-rows: 13.5rem 1.5rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  
+  body {
+    grid-template-columns: 20% 60% 20%;
+  }
+  
+  .project-visible {
+    grid-template-rows: 20.5rem 2.5rem;
+  }
+
+  .project-description > h3 {
+    font-size: 2rem;
+  }
+
+  .title {
+    margin: 1rem;
+    padding-bottom: .5rem;
+    text-align: center;
+    font-size: 2.25rem;
+  }
 }
